--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -11,6 +11,6 @@ This will make the generated index read from the `README.md` of the project buil
 
 The `README.md` file will contain a quick description of the project (ignoring the one that is specified in the POM.xml).  For open source projects the badges to Travis and SonarQube.com must be provided after the header as follows in a single line (lines broken down for readability).
 
-    [![Build Status](https://travis-ci.org/trajano/${module.id}.svg?branch=master)](https://travis-ci.org/trajano/${module.id})
+    [![Build Status](https://travis-ci.org/trajano/${repo.id}.svg?branch=master)](https://travis-ci.org/trajano/${repo.id})
     [![Quality Gate](https://sonarqube.com/api/badges/gate?key=${project.groupId}:${project.artifactId})](https://sonarqube.com/dashboard?id=${project.groupId}:${project.artifactId})
 ]]#
